Bug 168916 - Fileopen DOCX: cannot open file with tables
Summary: Fileopen DOCX: cannot open file with tables
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.4.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Tables Writer-Tables-Nested DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2025-10-17 09:33 UTC by Timur
Modified: 2026-01-02 19:22 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
DOCX (19.73 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-10-17 09:33 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-10-17 09:33:19 UTC
Created attachment 203386 [details]
DOCX

Cannot open DOCX file with tables. Started in 24.2:

commit 5127b1961b762643d47a26704556fd9b8664c6fc	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Wed Sep 13 08:14:19 2023 +0200
sw floattable, nesting: add DOCX import
Comment 1 raal 2025-10-17 14:34:55 UTC
Confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 Julien Nabet 2025-10-19 09:14:32 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I got never ending loop with these logs after some time:
warn:legacy.osl:34840:34840:sw/source/core/layout/tabfrm.cxx:6684: Warning! Trying to prevent a crash
warn:legacy.osl:34840:34840:sw/source/core/layout/tabfrm.cxx:978: There should be a flowline in the follow
Comment 3 Commit Notification 2025-10-22 11:52:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1d833123014274a182ea42e92ca21e4ece736389

Related: tdf#168916 DOCX import: handle page break from style on framed para

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-10-24 07:28:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/48267890aa9567eb01bff87d8a3f69f8e0ad9997

Related: tdf#168916 DOCX import: handle page break from style on framed para

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-10-31 13:24:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3a0b56e4b2b94fd9001ea7a95488142cd9d6186d

tdf#168916 DOCX import, <w:wAfter>: make dummy paragraph less visible

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Timur 2025-11-03 11:02:04 UTC
Before the identified commit, sample would open regardless is Garamond font was installed. 
With fixing commit, it only opens if Garamond font is installed.
Comment 7 Miklos Vajna 2025-11-04 07:46:40 UTC
The trouble is that Garamond is always installed with Word, so it's not trivial to know what would be the expected, correct layout without Garamond installed. If you have time, it would be a possibility to create a version of the bugdoc that doesn't use Garamond (so no font fallback happens), and then it would be possible to see what is the Word layout for that and then fix up Writer to do the same.

Sorry for being unclear about that, usually we consider font fallback problems as non-interesting, saying "just install the font" as the fix. Thanks.
Comment 8 Commit Notification 2025-11-07 20:20:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0e9f3c631e97bc148ee5f26a7f3eab5468f15f72

tdf#168916 DOCX import, <w:wAfter>: make dummy paragraph less visible

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Piotr Osada 2025-12-28 23:03:40 UTC
Bug is still present in:

Version: 25.8.4.2 (X86_64)
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (pl_PL); UI: en-US
Calc: CL threaded

Writer hangs for a long while when opening the attachment 203386 [details] file (at least 5 minutes without response — I haven't waited until the response).
Comment 10 Miklos Vajna 2026-01-02 14:57:25 UTC
Oh, that's annoying. So there were two problems here: there was an original document that Timur simplified, resulting in two documents.

What is fixed:

- sw/qa/writerfilter/dmapper/data/framepr-pagebreak-style.docx
- sw/qa/writerfilter/ooxml/data/table-wafter-row-height.docx

And what's not fixed is what you tested above. Given that this bug is already referenced from two commits and what you point out is a third problem, I suggest to go back to closing this bug again, but I agree that having a follow-up report for the third problem would be useful. Thanks.
Comment 11 Piotr Osada 2026-01-02 19:21:17 UTC
In dev it opens successfully:
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded
2026-01-02_04.40.18/